# starknet-devnet

./: .clippy.toml  .coderabbit.yaml  .dockerignore  .gitignore  .gitmodules  .pylintrc  404.html  Cargo.toml  Dockerfile  INFO  LICENSE  README.md  RELEASE.md  _typos.toml  chatgpt-openssl-windows-TODO.md  devnet_api.json  dump  index.html  package-lock.json  package.json  pyproject.toml  rust-toolchain.toml  rustfmt.toml  seed0.Dockerfile  sitemap.xml
crates/cli/: Cargo.toml
crates/cli/src/: main.rs
crates/server/: Cargo.toml
crates/server/src/: builder.rs  config.rs  lib.rs  rpc_handler.rs  server.rs  test_utils.rs
crates/server/src/api/: mod.rs
crates/starknet/: Cargo.toml
crates/starknet-devnet/: Cargo.toml
crates/starknet-devnet-core/: Cargo.toml
crates/starknet-devnet-core/accounts_artifacts/: ERC20_Mintable_OZ_0.13.0.json  ERC20_Mintable_OZ_0.2.0.json  ERC20_Mintable_OZ_0.8.0.json  ERC20_Mintable_OZ_0.8.1.json
crates/starknet-devnet-core/contracts/system_artifacts/: ERC20_Mintable_OZ_0.20.0.sierra  UDC_OZ_0.20.0.sierra  argent_0.4.0.sierra  argent_multisig_0.2.0.sierra  compilation_info.txt  (+2 more)
crates/starknet-devnet-core/src/: account.rs  constants.rs  contract_class_choice.rs  error.rs  lib.rs  metrics.rs  predeployed_accounts.rs  raw_execution.rs  stack_trace.rs  system_contract.rs  traits.rs  transactions.rs  utils.rs
crates/starknet-devnet-core/test_artifacts/: events_cairo1.sierra
crates/starknet-devnet-server/: Cargo.toml
crates/starknet-devnet-server/src/: builder.rs  config.rs  dump.rs  dump_util.rs  error.rs  lib.rs  metrics.rs  restrictive_methods.rs  restrictive_mode.rs  rpc_handler.rs  server.rs  subscribe.rs  test_utils.rs  walnut_util.rs  websocket_types.rs
crates/starknet-devnet-types/: Cargo.toml  build.rs
crates/starknet-devnet-types/src/: canonical.rs  chain_id.rs  constants.rs  contract_storage_key.rs  error.rs  lib.rs  patricia_key.rs  rpc.rs  serde_helpers.rs  traits.rs  uint.rs  utils.rs
crates/starknet-devnet/benches/: mint_bench.rs
crates/starknet-devnet/src/: cli.rs  initial_balance_wrapper.rs  ip_addr_wrapper.rs  main.rs  metrics.rs
crates/starknet-devnet/tests/: general_integration_tests.rs  general_rpc_tests.rs  get_transaction_by_block_id_and_index.rs  get_transaction_by_hash.rs  get_transaction_receipt_by_hash.rs  test_abort_blocks.rs  test_account_impersonation.rs  test_account_selection.rs  test_advancing_time.rs  test_balance.rs  test_blocks_generation.rs  test_blocks_on_demand.rs  test_call.rs  test_dump_and_load.rs  test_estimate_fee.rs  test_estimate_message_fee.rs  test_fork.rs  test_gas_modification.rs  test_gas_set.rs  test_gas_update.rs  test_get_block_txs_count.rs  test_get_class.rs  test_get_class_hash_at.rs  test_get_events.rs  test_memory.rs  test_memory_test.rs  test_messaging.rs  test_minting.rs  test_old_state.rs  test_restart.rs  test_restricted_methods.rs  test_restrictive_mode.rs  test_simulate_transactions.rs  test_subscription_to_blocks.rs  test_subscription_to_events.rs  test_subscription_to_pending_txs.rs  test_subscription_to_reorg.rs  test_subscription_to_tx_status.rs  test_subscription_with_invalid_block_id.rs  test_trace.rs  (+4 more)
crates/starknet-server/: Cargo.toml
crates/starknet-server/src/: cli.rs  contract_class_choice.rs  initial_balance_wrapper.rs  ip_addr_wrapper.rs  lib.rs  main.rs  server.rs
crates/starknet-server/test_data/: request_from_mario.json
crates/starknet-server/tests/: general_integration_tests.rs  general_rpc_tests.rs  get_transaction_by_block_id_and_index.rs  get_transaction_by_hash.rs  get_transaction_receipt_by_hash.rs  integration_tests.rs  test_account_selection.rs  test_advancing_time.rs  test_call.rs  test_cli.rs  test_dump_and_load.rs  test_estimate_fee.rs  test_estimate_message_fee.rs  test_get_class.rs  test_get_class_hash_at.rs  test_get_class_hash_at.tmp  test_get_events.rs  test_memory_test.rs  test_messaging.rs  test_minting.rs  test_restart.rs  test_simulate_transactions.rs  test_trace.rs  test_transaction_handling.rs
crates/starknet/accounts_artifacts/: ERC20_Mintable_OZ_0.8.0.json
crates/starknet/schemas/: predeployed_accounts_fixed_seed.json
crates/starknet/src/: account.rs  block.rs  constants.rs  error.rs  errors.rs  lib.rs  main.rs  predeployed_account.rs  predeployed_accounts.rs  raw_execution.rs  server.rs  state.rs  state_diff.rs  system_account.rs  system_contract.rs  test_utils.rs  traits.rs  transaction.rs  transactions.rs  types.rs  utils.rs
crates/starknet/test_artifacts/: cairo_0_l1l2.json
crates/starter/: Cargo.toml  build.rs
crates/starter/src/: main.rs  multiplex_service.rs
crates/types/: Cargo.toml  test_data
crates/types/data/: sierra_contract_class_with_abi_as_string.json
crates/types/src/: chain_id.rs  constants.rs  contract_address.rs  contract_class.rs  contract_storage_key.rs  emitted_event.rs  error.rs  felt.rs  lib.rs  patricia_key.rs  rpc.rs  serde_helpers.rs  test_utils.rs  traits.rs  utils.rs
tests/integration/: Cargo.toml  balance.rs  blocks_generation.rs  dump_and_load.rs  estimate_fee.rs  estimate_message_fee.rs  fork.rs  gas_modification.rs  general_integration_tests.rs  general_rpc_tests.rs  get_block_with_txs_and_receipts.rs  get_class.rs  get_events.rs  get_transaction_by_block_id_and_index.rs  get_transaction_by_hash.rs  get_transaction_receipt_by_hash.rs  lib.rs  messaging.rs  old_state.rs  prove_transaction.rs  restart.rs  simulate_transactions.rs  subscription_to_blocks.rs  subscription_to_events.rs  subscription_to_new_tx_receipts.rs  subscription_to_tx_status.rs  test_abort_blocks.rs  test_accepting_blocks_on_l1.rs  test_account_impersonation.rs  test_account_selection.rs  test_advancing_time.rs  test_advancing_time_on_fork.rs  test_balance.rs  test_blocks_generation.rs  test_call.rs  test_deploy.rs  test_dump_and_load.rs  test_estimate_fee.rs  test_estimate_message_fee.rs  test_fork.rs  (+26 more)
tests/integration/common/: assertions.rs  background_anvil.rs  background_devnet.rs  background_server.rs  constants.rs  errors.rs  fees.rs  mod.rs  reqwest_client.rs  safe_child.rs  utils.rs
(+3791 files in other folders)
