[workspace]
resolver = "2"
members = [
	"crates/starknet-devnet-types",
	"crates/starknet-devnet-core",
	"crates/starknet-devnet-server",
]

[profile.release]
panic = "unwind"

[workspace.package]
authors = ["Mario"]
edition = "2021"
repository = "https://github.com/0xSpaceShard/starknet-devnet-rs"
license-file = "LICENSE"
homepage = "https://0xspaceshard.github.io/starknet-devnet-rs"
description = "A local testnet for Starknet"
readme = "README.md"
documentation = "https://0xspaceshard.github.io/starknet-devnet-rs/docs/intro"

exclude = [".github/**", ".devcontainer/**", ".circleci/**"]

keywords = ["starknet", "cairo", "testnet", "local", "server"]


[workspace.dependencies]

# axum
axum = { version = "0.7" }
http-body-util = { version = "0.1" }
tower-http = { version = "0.5", features = ["full"] }

# async
tokio = { version = "1", features = [
	"time",
	"macros",
	"rt-multi-thread",
	"signal",
] }
futures = "0.3"
async-trait = "0.1"

# tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }

# misc
base64 = { version = "0.22" }
clap = { version = "4.3.2", features = ["derive", "env"] }
flate2 = { version = ">= 1.0.26, < 1.0.27" }
nonzero_ext = "0.3.0"
serde = { version = "1.0.197", features = ["derive"] }
serde_json = { version = "1.0.114" }
serde_yaml = { version = "0.9.27" }
thiserror = { version = "1.0.32" }
anyhow = "1"
indexmap = "2.0.0"
rand = "0.8.5"
rand_chacha = "0.3.1"
rand_mt = "4.2.2"
regex_generate = "0.2.3"
reqwest = { version = "0.12", features = ["blocking", "json"] }
url = "2.4"
usc = { version = "2.2.0", package = "universal-sierra-compiler" }
num-bigint = { version = "0.4" }
bigdecimal = { version = "0.4.5" }
enum-helper-macros = "0.0.1"

# Starknet dependencies
starknet-types-core = "0.1.5"
starknet_api = { version = "0.13.0-rc.0", features = ["testing"] }
blockifier = { version = "0.8.0" }
starknet-rs-signers = { version = "0.10.0", package = "starknet-signers" }
starknet-rs-core = { version = "0.12.0", package = "starknet-core" }
starknet-rs-providers = { version = "0.12.0", package = "starknet-providers" }
starknet-rs-accounts = { version = "0.11.0", package = "starknet-accounts" }
starknet-rs-contract = { version = "0.11.0", package = "starknet-contract" }
starknet-rs-crypto = { version = "0.7.2", package = "starknet-crypto" }
cairo-vm = "=1.0.1"

# Cairo-lang dependencies
cairo-lang-starknet-classes = "=2.7.0"
cairo-lang-compiler = "=2.7.0"
cairo-lang-casm = "=2.7.0"
cairo-lang-defs = "=2.7.0"
cairo-lang-diagnostics = "=2.7.0"
cairo-lang-filesystem = "=2.7.0"
cairo-lang-lowering = "=2.7.0"
cairo-lang-semantic = "=2.7.0"
cairo-lang-sierra = "=2.7.0"
cairo-lang-sierra-generator = "=2.7.0"
cairo-lang-sierra-to-casm = "=2.7.0"
cairo-lang-syntax = "=2.7.0"
cairo-lang-utils = "=2.7.0"

# Inner dependencies
starknet-types = { version = "0.2.3", path = "crates/starknet-devnet-types", package = "starknet-devnet-types" }
starknet-core = { version = "0.2.3", path = "crates/starknet-devnet-core", package = "starknet-devnet-core" }
server = { version = "0.2.3", path = "crates/starknet-devnet-server", package = "starknet-devnet-server" }

# Dependabot alerts
zerocopy = "0.7.31"
unsafe-libyaml = "0.2.10"
h2 = "0.4"

ethers = { version = "2.0.11" }

openssl = { version = "0.10", features = ["vendored"] }

parking_lot = "0.12.3"

# Dev dependencies
serial_test = "3.1.1"
hex = "0.4.3"
lazy_static = { version = "1.4.0" }

# Benchmarking
criterion = { version = "0.3.4", features = ["async_tokio"] }
