[workspace]
resolver = "2"
members = [
	"crates/starknet-devnet-types",
	"crates/starknet-devnet-core",
	"crates/starknet-devnet-server",
	"crates/starknet-devnet",
	"tests/integration",
]

[profile.release]
panic = "unwind"

[workspace.package]
authors = ["Mario"]
edition = "2021"
repository = "https://github.com/0xSpaceShard/starknet-devnet"
license-file = "LICENSE"
homepage = "https://0xspaceshard.github.io/starknet-devnet"
description = "A local testnet for Starknet"
readme = "README.md"
documentation = "https://0xspaceshard.github.io/starknet-devnet/docs/intro"

exclude = [".github/**", ".devcontainer/**", ".circleci/**"]

keywords = ["starknet", "cairo", "testnet", "local", "server"]

[workspace.lints.clippy]
unwrap-used = "deny"
expect-used = "deny"

[workspace.lints.rust]
dead-code = "warn"


[workspace.dependencies]

# axum
axum = { version = "0.7", features = ["ws"] }
http-body-util = { version = "0.1" }
tower-http = { version = "0.5", features = ["full"] }

# async
tokio = { version = "1.43.1", features = [
	"time",
	"macros",
	"rt-multi-thread",
	"signal",
	"sync",
] }
futures = "0.3"
async-trait = "0.1"

# tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3.20", features = ["env-filter", "fmt"] }

# misc
base64 = { version = "0.22" }
clap = { version = "4.3.2", features = ["derive", "env"] }
flate2 = { version = ">= 1.0.26, < 1.0.27" }
nonzero_ext = "0.3.0"
serde = { version = "1.0.197", features = ["derive"] }
serde_json = { version = "1.0.114" }
serde_yaml = { version = "0.9.27" }
thiserror = { version = "1.0.32" }
anyhow = "1"
indexmap = "2.0.0"
rand = "0.8.5"
rand_chacha = "0.3.1"
rand_mt = "4.2.2"
regex_generate = "0.2.3"
reqwest = { version = "0.12.15", features = ["json"] }
url = "2.5"
usc = { version = "2.6.0-rc.0", package = "universal-sierra-compiler" }
num-bigint = { version = "0.4" }
bigdecimal = { version = "0.4.5" }
enum-helper-macros = "0.0.1"

# Starknet dependencies
starknet-types-core = "=0.2.3"
starknet_api = { version = "0.16.0-rc.1", features = ["testing"] }
blockifier = { version = "0.16.0-rc.1" }
starknet-rs-signers = { version = "0.14.0", package = "starknet-signers" }
starknet-rs-core = { version = "0.16.0", package = "starknet-core" }
starknet-rs-providers = { version = "0.16.0", package = "starknet-providers" }
starknet-rs-accounts = { version = "0.16.0", package = "starknet-accounts" }
starknet-rs-contract = { version = "0.16.0", package = "starknet-contract" }
cairo-vm = "=2.5.0"

# Cairo-lang dependencies
cairo-lang-starknet-classes = "=2.12.3"
cairo-lang-compiler = "=2.12.3"
cairo-lang-casm = "=2.12.3"
cairo-lang-defs = "=2.12.3"
cairo-lang-diagnostics = "=2.12.3"
cairo-lang-filesystem = "=2.12.3"
cairo-lang-lowering = "=2.12.3"
cairo-lang-semantic = "=2.12.3"
cairo-lang-sierra = "=2.12.3"
cairo-lang-sierra-generator = "=2.12.3"
cairo-lang-sierra-to-casm = "=2.12.3"
cairo-lang-syntax = "=2.12.3"
cairo-lang-utils = "=2.12.3"

# Inner dependencies
starknet-types = { version = "0.6.1", path = "crates/starknet-devnet-types", package = "starknet-devnet-types" }
starknet-core = { version = "0.6.1", path = "crates/starknet-devnet-core", package = "starknet-devnet-core" }
server = { version = "0.6.1", path = "crates/starknet-devnet-server", package = "starknet-devnet-server" }

# Dependabot alerts
zerocopy = "0.7.31"
unsafe-libyaml = "0.2.10"
h2 = "0.4"
ring = "0.17.13"


alloy = { version = "1.1.0", features = ["full"] }
eyre = "0.6"

# Changed from 0.10 to 0.10.72 as suggested by Dependabot: https://github.com/0xSpaceShard/starknet-devnet/security/dependabot/53
openssl = { version = "0.10.72", features = ["vendored"] }

parking_lot = "0.12.3"

# Dev dependencies
serial_test = "3.1.1"
hex = "0.4.3"
lazy_static = { version = "1.4.0" }
tokio-tungstenite = { version = "0.21.0" }
listeners = "0.2.1"

# https://github.com/paritytech/parity-scale-codec/issues/656
parity-scale-codec = "=3.7.4"
parity-scale-codec-derive = "=3.7.4"

# https://app.circleci.com/pipelines/github/0xSpaceShard/starknet-devnet/3033/workflows/3f93463c-7550-432b-8868-9bb0bf96dc10/jobs/5012
cargo-platform = "=0.1.8"
