[package]
name = "cli"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "cli"
path = "src/main.rs"

[dependencies]
clap = { version = "4.3.2", features = ["derive"] }
starknet-core = { workspace = true }
starknet-types = { workspace = true }
random-number-generator = { workspace = true }
anyhow = { version = "1.0" }