[package]
name = "server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rpc-core = { git = "https://github.com/foundry-rs/foundry.git", package = "anvil-rpc" }

# axum related
axum = { version = "0.5" }
hyper = "0.14"
tower-http = { version = "0.4", features = ["trace", "cors"] }
tower = { version = "0.4", features = ["full"] }

# tracing
tracing = "0.1"

# async
parking_lot = "0.12"
futures = "0.3"

# misc
serde_json = "1"
serde = { version = "1", features = ["derive"] }
async-trait = "0.1"
thiserror = "1"