[package]
name = "server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

# axum
axum = { workspace = true }
hyper = { workspace = true }
tower-http = { workspace = true }
tower = { workspace = true }

# rpc
rpc-core = { workspace = true }

# tracing
tracing = { workspace = true }

# async
futures = { workspace = true }
async-trait = { workspace = true }
tokio = { workspace = true, features = ["sync"] }

# misc
serde_json = { workspace = true }
serde = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }

# devnet
starknet-core = { workspace = true }
starknet-types = { workspace = true }
starknet-rs-core = { workspace = true }

[dev-dependencies]
rand = { workspace = true }
rand_chacha = { workspace = true }
regex_generate = { workspace = true }
serde_yaml = { workspace = true }

[features]
test_utils = []