[package]
name = "starknet-devnet-core"
version.workspace = true
edition.workspace = true
repository.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
blockifier = { workspace = true, features = ["testing"]}
cairo-lang-starknet = { workspace = true }
clap = { workspace = true }
ethers = { workspace = true }
starknet_api = { workspace = true, features = ["testing"] }
thiserror = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
starknet-rs-signers = { workspace = true }
starknet-rs-ff = { workspace = true }
starknet-rs-core = { workspace = true }
starknet-types = { workspace = true }
rand = { workspace = true }
rand_mt = { workspace = true }
tracing = { workspace = true }
indexmap = { workspace = true }

[dev-dependencies]
hex = "0.4.3"

[features]
test_utils = []
