[package]
name = "starknet-devnet-core"
version = "0.0.6"
edition.workspace = true
repository.workspace = true
license-file.workspace = true
description = "Starknet core logic for devnet"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
blockifier = { workspace = true, features = ["testing"] }
cairo-lang-starknet-classes = { workspace = true }
clap = { workspace = true }
ethers = { workspace = true }
starknet_api = { workspace = true, features = ["testing"] }
thiserror = { workspace = true }
reqwest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
starknet-rs-signers = { workspace = true }
starknet-rs-ff = { workspace = true }
starknet-rs-core = { workspace = true }
starknet-types = { workspace = true }
rand = { workspace = true }
rand_mt = { workspace = true }
tracing = { workspace = true }
indexmap = { workspace = true }
url = { workspace = true }
nonzero_ext = { workspace = true }
usc = { workspace = true }

# necessary for installing reqwest in Docker
openssl = { workspace = true }

[dev-dependencies]
hex = "0.4.3"

[features]
test_utils = []

[package.metadata.cargo-machete]
ignored = [
    # read note above
    "openssl"
]
