[package]
name = "starknet-devnet-types"
version = "0.0.4"
edition = "2021"
description = "Starknet types for the devnet"
repository.workspace = true
license-file.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
base64 = { workspace = true }
blockifier = { workspace = true }
cairo-lang-starknet-classes = { workspace = true }
clap = { workspace = true }
flate2 = { workspace = true }
starknet_api = { workspace = true }
thiserror = { workspace = true }
starknet-rs-core = { workspace = true }
starknet-rs-crypto = { workspace = true }
serde = { workspace = true }
serde_json = { version = "1.0.81", features = [
    "arbitrary_precision",
    "preserve_order",
] }
starknet-rs-ff = { workspace = true }
num-integer = { version = "0.1.45", default-features = false }
num-bigint = { version = "0.4", features = ["serde"], default-features = false }
usc = { workspace = true }

# Cairo-lang dependencies
cairo-lang-compiler = { workspace = true }
cairo-lang-casm = { workspace = true }
cairo-lang-defs = { workspace = true }
cairo-lang-diagnostics = { workspace = true }
cairo-lang-filesystem = { workspace = true }
cairo-lang-lowering = { workspace = true }
cairo-lang-semantic = { workspace = true }
cairo-lang-sierra = { workspace = true }
cairo-lang-sierra-generator = { workspace = true }
cairo-lang-sierra-to-casm = { workspace = true }
cairo-lang-syntax = { workspace = true }
cairo-lang-utils = { workspace = true }

[dev-dependencies]

[package.metadata.cargo-machete]
ignored = [
    "num-integer",                 # dependency of the types crate, but only re-exported
    "cairo-lang-casm",             # cannot publish without cairo-lang-*
    "cairo-lang-compiler",
    "cairo-lang-defs",
    "cairo-lang-diagnostics",
    "cairo-lang-filesystem",
    "cairo-lang-lowering",
    "cairo-lang-semantic",
    "cairo-lang-sierra",
    "cairo-lang-sierra-generator",
    "cairo-lang-sierra-to-casm",
    "cairo-lang-syntax",
    "cairo-lang-utils",
]
