[package]
name = "starknet-devnet-types"
version = "0.4.1"
edition = "2021"
description = "Starknet types for the devnet"
repository.workspace = true
license-file.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
testing = []

[lints]
workspace = true

[dependencies]
base64 = { workspace = true }
blockifier = { workspace = true }
cairo-lang-starknet-classes = { workspace = true }
flate2 = { workspace = true }
starknet_api = { workspace = true }
starknet-types-core = { workspace = true }
thiserror = { workspace = true }
starknet-rs-core = { workspace = true }
cairo-vm = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true, features = [
    "arbitrary_precision",
    "preserve_order",
] }
num-bigint = { workspace = true }
bigdecimal = { workspace = true }
usc = { workspace = true }
tracing = { workspace = true }

# Cairo-lang dependencies
cairo-lang-compiler = { workspace = true }
cairo-lang-casm = { workspace = true }
parity-scale-codec = { workspace = true }
parity-scale-codec-derive = { workspace = true }
cairo-lang-defs = { workspace = true }
cairo-lang-diagnostics = { workspace = true }
cairo-lang-filesystem = { workspace = true }
cairo-lang-lowering = { workspace = true }
cairo-lang-semantic = { workspace = true }
cairo-lang-sierra = { workspace = true }
cairo-lang-sierra-generator = { workspace = true }
cairo-lang-sierra-to-casm = { workspace = true }
cairo-lang-syntax = { workspace = true }
cairo-lang-utils = { workspace = true }

[dev-dependencies]

[package.metadata.cargo-machete]
ignored = [
    "cairo-lang-casm",             # cannot publish without cairo-lang-*
    "cairo-lang-compiler",
    "cairo-lang-defs",
    "cairo-lang-diagnostics",
    "cairo-lang-filesystem",
    "cairo-lang-lowering",
    "cairo-lang-semantic",
    "cairo-lang-sierra",
    "cairo-lang-sierra-generator",
    "cairo-lang-sierra-to-casm",
    "cairo-lang-syntax",
    "cairo-lang-utils",
    "parity-scale-codec",
    "parity-scale-codec-derive",
]
