[package]
name = "starknet-devnet"
version = "0.0.6"
edition = "2021"
repository.workspace = true
license-file.workspace = true
readme.workspace = true
documentation.workspace = true
description.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "starknet-devnet"
path = "src/main.rs"

[dependencies]
# devnet
server = { workspace = true }
starknet-core = { workspace = true }
starknet-types = { workspace = true }
starknet-rs-core = { workspace = true }
url = { workspace = true }

# async
tokio = { workspace = true, features = ["signal"] }

# tracing
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

# misc
clap = { workspace = true }
serde_json = { workspace = true }
serde = { workspace = true }
anyhow = { workspace = true }
starknet-rs-providers = { workspace = true }

[dev-dependencies]
async-trait = { workspace = true }
thiserror = { workspace = true }
ethers = { workspace = true }
lazy_static = { workspace = true }
starknet-rs-contract = { workspace = true }
server = { workspace = true, features = ["test_utils"] }
starknet-core = { workspace = true, features = ["test_utils"] }
starknet-rs-signers = { workspace = true }
starknet-rs-core = { workspace = true }
starknet-rs-accounts = { workspace = true }
axum = { workspace = true }
usc = { workspace = true }
reqwest = { workspace = true }
criterion = { version = "0.3.4", features = ["async_tokio"] }
serial_test = { workspace = true }


[[bench]]
name = "mint_bench"
harness = false
path = "benches/mint_bench.rs"
