[package]
name = "starknet-devnet"
version = "0.2.3"
edition.workspace = true
repository.workspace = true
license-file.workspace = true
readme.workspace = true
documentation.workspace = true
description.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "starknet-devnet"
path = "src/main.rs"

[dependencies]
# devnet
starknet-devnet-server = { workspace = true }
starknet-devnet-core = { workspace = true }
starknet-devnet-types = { workspace = true }
starknet-core = { workspace = true }
url = { workspace = true }

# async
tokio = { workspace = true, features = ["signal"] }
futures = { workspace = true }

# tracing
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

# misc
clap = { workspace = true }
serde_json = { workspace = true }
serde = { workspace = true }
anyhow = { workspace = true }
starknet-providers = { workspace = true }

[dev-dependencies]
async-trait = { workspace = true }
thiserror = { workspace = true }
ethers = { workspace = true }
lazy_static = { workspace = true }
starknet-contract = { workspace = true }
starknet-devnet-server = { workspace = true, features = ["test_utils"] }
starknet-devnet-core = { workspace = true, features = ["test_utils"] }
starknet-signers = { workspace = true }
starknet-core = { workspace = true }
starknet-accounts = { workspace = true }
axum = { workspace = true }
universal-sierra-compiler = { workspace = true }
reqwest = { workspace = true }
criterion = { workspace = true }
serial_test = { workspace = true }


[[bench]]
name = "mint_bench"
harness = false
path = "benches/mint_bench.rs"
