[package]
name = "starknet-devnet"
version = "0.2.3"
edition = "2021"
repository.workspace = true
license-file.workspace = true
readme.workspace = true
documentation.workspace = true
description.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "starknet-devnet"
path = "src/main.rs"

[lints]
workspace = true

[dependencies]
# devnet
server = { workspace = true }
starknet-core = { workspace = true }
starknet-types = { workspace = true }
starknet-rs-core = { workspace = true }
url = { workspace = true }

# async
tokio = { workspace = true, features = ["signal"] }
futures = { workspace = true }

# tracing
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

# misc
clap = { workspace = true }
serde_json = { workspace = true }
serde = { workspace = true }
anyhow = { workspace = true }
starknet-rs-providers = { workspace = true }

[dev-dependencies]
serial_test = { workspace = true }
