[package]
name = "starknet-server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "starknet-devnet"
path = "src/main.rs"

[dependencies]

# devnet
random-number-generator = { workspace = true }
server = { path = "../server" }
starknet-core = { workspace = true }
starknet-types = { workspace = true }
starknet-core = { workspace = true }

# axum
axum = { workspace = true }
hyper = { workspace = true }
tower-http = { workspace = true }
tower = { workspace = true }

# async
tokio = { workspace = true }
futures = { workspace = true }
async-trait = { workspace = true }

# tracing
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

# misc
clap = { workspace = true }
serde_json = { workspace = true }
serde = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }