[package]
name = "starknet"
version.workspace = true
edition.workspace = true
repository.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
blockifier = { workspace = true, features = ["testing"]}
flate2 = { workspace = true }
starknet_api = { workspace = true, features = ["testing"] }
thiserror = { workspace = true }
starknet-in-rust = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
starknet-rs-signers = { workspace = true }
starknet-rs-ff = { workspace = true }
starknet-rs-core = { workspace = true }
starknet-rs-providers = { workspace = true }
starknet-types = { workspace = true }
random-number-generator = { workspace = true }
tracing = { workspace = true }
indexmap = { workspace = true }
strum = { workspace = true }
strum_macros = { workspace = true }
tokio = { workspace = true }
url = { workspace = true }

cairo-lang-starknet = "2.2.0"
cairo-lang-utils = "2.2.0"

[dev-dependencies]
jsonschema = "0.16.0"

[features]
test_utils = []